Add get fridgeId
