# Code/sfrigo/api/gateway/index.js
@@ -57,6 +57,10 @@ apiRouter.post('/fridges', (req, res) => {
   forwardRequest(req, res, FRIDGE_SERVICE_URL);
 });
 
+apiRouter.get('/fridges/:fridgeId', (req, res) => {
+  forwardRequest(req, res, FRIDGE_SERVICE_URL);
+});
+
 // --- MEMBERS / INVITES ---
 apiRouter.post('/fridges/:fridgeId/invites', (req, res) => {
   forwardRequest(req, res, FRIDGE_SERVICE_URL);
